--- a/IPython/Feature_Traversal_Interval.ipynb
+++ b/IPython/Feature_Traversal_Interval.ipynb
@@ -1659,7 +1659,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Traversal Pairs"
+    "### Traversal Pairs\n",
+    "**Feature transformation** The probability of the feature combination pair is used as weight and applied onto the count for each row.\n",
+    "\n",
+    "**Note**: The overall hospital admission LOS may be extracted by taking the aggregate mean of the DataFrame, after it has been grouped by `subject_id`."
    ]
   },
   {
@@ -2105,11 +2108,7 @@
     "## Response Variable\n",
     "### Average ICU LOS\n",
     "Feature (Response): The average length of stay in the ICU (`icustay_id`) for each patient's hospital admission.\n",
-    "  * Feature is the response/dependent variable (`y`)\n",
-    "\n",
-    "**Feature transformation** The probability of the feature combination pair is used as weight and applied onto the count for each row.\n",
-    "\n",
-    "**Note**: The overall hospital admission LOS may be extracted by taking the aggregate mean of the DataFrame, after it has been grouped by `subject_id`."
+    "  * Feature is the response/dependent variable (`y`)"
    ]
   },
   {
