--- a/IPython/5_Feature_Traversal_Interval-Part2.ipynb
+++ b/IPython/5_Feature_Traversal_Interval-Part2.ipynb
@@ -4,14 +4,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Week 5 - Feature Engineering: Traversals Part 2\n",
+    "# Week 5 - Feature Engineering: Traversals Intervals Part 2\n",
     "### March 24, 2017\n",
     "\n",
     "#### Objectives\n",
     "  * Continue previous feature engineering efforts by exploring the following:\n",
     "    1. New Regression Models: k-Nearest Neighbors, Random Forest\n",
     "    2. Box Cox Transformations\n",
-    "    3. Addition of histograms of models' results"
+    "    3. Addition of histograms of models' results\n",
+    "    \n",
+    "#### Note\n",
+    "This notebook's efforts worked with the dataset filtered by intervals of 30 days for ICU readmissions.\n",
+    "\n",
+    "It was decided with the team that the interval approach may not be best. Moving forward, this notebook's purpose will be obsolete."
    ]
   },
   {
@@ -3077,12 +3082,14 @@
     "\n",
     "Model | RMSE | MAE | R<sup>2</sup> |\n",
     ":-----|:----:|:---:| :------------:|\n",
-    "Linear Regression|||\n",
-    "Support Vector Regression (*kernel: linear*)|||\n",
+    "Linear Regression|-|-|-\n",
+    "Support Vector Regression|-|-|-\n",
     "k-Nearest Neighbors|12.05|2.86|-0.18\n",
     "Random Forest|10.08|2.53|0.18\n",
     "\n",
-    "This normalization approach gave no improvements to the model. All metrics evaluating the performance of the regression models actually worsened from the transformation."
+    "This normalization approach gave no improvements to the model. All metrics evaluating the performance of the regression models actually worsened from the transformation.\n",
+    "\n",
+    "The results for the Linear Regression & Support Vector Machine regression models were not completed due to run-time errors."
    ]
   }
  ],
