Update model prediction results

--- a/IPython/5_Feature-Traversal-Part2.ipynb
+++ b/IPython/5_Feature-Traversal-Part2.ipynb
@@ -5174,6 +5174,15 @@
     "\n",
     "The transition from this approach yielded improvements in overall RMSE values (decreased by 2-3 days) with a trade-off in slightly decreased MAE (0.5-1.0 days). Thus, indicating the current feature engineering approach has less discrepancies of larger values (or outliers). In other words, this approach has a lower frequency of large prediction errors."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -5181,6 +5190,18 @@
    "display_name": "Python 2",
    "language": "python",
    "name": "python2"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 2
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython2",
+   "version": "2.7.11"
   }
  },
  "nbformat": 4,
