Add deep learning ipynb

--- a/IPython/7_Features-combo-split.ipynb
+++ b/IPython/7_Features-combo-split.ipynb
@@ -10498,8 +10498,8 @@
    "source": [
     "## Conclusion\n",
     "### Main Points\n",
-    "  1. Cutting-off the range of the target variable (ICU LOS) for the Regression Models improve **RMSE** and **MAE** metrics. Although, the improvement is not as great as it appears as it's about the same in relation to the new (lower) range of values (`y_test`).\n",
-    "  2. **Issue**: The predictions of the regression models are still unable to predit the records within the upper range of the target variable. The **max** of the predictions are around 8 days and 10-12 days for the cut-off of 12 and 18 days, respectively.\n",
+    "  1. The addition of clinical features mainly **improved R<sup>2</sup>** scores (minor changes in `RMSE` & `MAE`), suggesting that the model now *fits the data better* and may be more generalizable to future, unseen data.\n",
+    "  2. **Issue**: The predictions of the regression models are still unable to predict the records within the upper range of the target variable. The **max** of the predictions are around 8 days and 10-12 days for the cut-off of 12 and 18 days, respectively.\n",
     "  3. Poor classification metrics indicates that the features may not be applicable for classification modeling.\n",
     "\n",
     "\n",
@@ -10529,16 +10529,6 @@
     "\n",
     "The range of predictions slightly improved, but the end range of are still being missed.\n",
     "\n",
-    "#### RMSE\n",
-    "In regards to RMSE, the models have relatively decent performances in the prediction of ICU length of stay for new, unseen data. The RMSE values are greater than the MAE values for all models, suggesting that there are a higher frequency of larger residuals as the metric penalizes bigger discrepancies.\n",
-    "\n",
-    "#### MAE\n",
-    "All models are very strong in terms of their mean absolute errors with values ranging from 1-2 days for the ICU length of stays. Essentially, the models are only off, on average, 1-2 days in their prediction.\n",
-    "\n",
-    "#### R<sup>2</sup> - Coefficient of Determination\n",
-    "The very low R<sup>2</sup> values indicate that the models have very poor predictive power. \n",
-    "\n",
-    "More specifically, the k-Nearest Neighbors model is the weakest model. This suggests that the model is not generalizable to future unseen data and is possibly attributed to the fact that it's approach is \"lazy learning\". The model does not encompass a training phase and instead holds the entire training data and builds its model at the time of prediction. A drawback of this approach is longer run-time.\n",
     "\n",
     "### Classification - Extended LOS\n",
     "\n",
@@ -10606,7 +10596,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.11"
+   "version": "2.7.13"
   }
  },
  "nbformat": 4,
