--- a/IPython/7_Features-combo-split.ipynb
+++ b/IPython/7_Features-combo-split.ipynb
@@ -10499,8 +10499,13 @@
     "## Conclusion\n",
     "### Main Points\n",
     "  1. The addition of clinical features mainly **improved R<sup>2</sup>** scores (minor changes in `RMSE` & `MAE`), suggesting that the model now *fits the data better* and may be more generalizable to future, unseen data.\n",
-    "  2. **Issue**: The predictions of the regression models are still unable to predict the records within the upper range of the target variable. The **max** of the predictions are around 8 days and 10-12 days for the cut-off of 12 and 18 days, respectively.\n",
-    "  3. Poor classification metrics indicates that the features may not be applicable for classification modeling.\n",
+    "  2. New model(s), Gradient Boosting Regressor, yielded similar results to prior models.\n",
+    "  3. **Issue**: The predictions of the regression models are still unable to predict the records within the upper range of the target variable. The **max** of the predictions are around 7-10 days and 8-11 days for the cut-off of 12 and 18 days, respectively.\n",
+    "  4. Poor classification metrics indicates that the features may not be applicable for classification modeling.\n",
+    "\n",
+    "#### Future Improvements\n",
+    "  1. Current clinical features are not specific to the scope of ICU stays. Adjusting the features may yield improvements in metrics.\n",
+    "  2. Reduce *overfitting* potentially caused by many features.\n",
     "\n",
     "\n",
     "### Regression\n",
@@ -10520,7 +10525,7 @@
     "Support Vector Regression (*kernel: rbf*)|3.7 (**-0.2**)|1.5 (**+0.1**)|-0.06 (**+0.02**)| [0.62, 8.73]\n",
     "k-Nearest Neighbors|3.7 (**-0.03**)|2.1 (**+0.1**)|0.01 (**+0.13**) | [1.07, 11.71]\n",
     "Random Forest|3.6 (**-0.3**)|1.5 (**-0.6**)|0.05 (**+0.13**) | [0.82, 8.0]\n",
-    "\n",
+    "Gradient Boosting|3.6|1.5|0.05 | [0.93, 8.0]\n",
     "\n",
     "All regression models have roughly similar metrics. They all have small predictive errors with relatively low RMSE and MAE values. On the contrary, they all have very poor R<sup>2</sup> scores, demonstrating poor predictive power.\n",
     "\n",
@@ -10596,7 +10601,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "version": "2.7.11"
   }
  },
  "nbformat": 4,
