Correct code bugs/typos

--- a/IPython/11_DRG-Grouped-split.ipynb
+++ b/IPython/11_DRG-Grouped-split.ipynb
@@ -6,32 +6,21 @@
    "source": [
     "# Week 11 - DRG: Grouped Diseases - Part 2\n",
     "\n",
-    "### May 5, 2017\n",
+    "### May 4, 2017\n",
     "\n",
     "#### Objectives\n",
     "  1. Explore if stratifying the model into sub-models specific to diseases yields improvements in the models' performance.\n",
-    "  2. Further stratify Organ Systems DRG - Surgical & Medical"
+    "  2. Further stratify Organ Systems DRG groups (Surgical & Medical) and determine if a granular classification system yields improved model performance."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 85,
    "metadata": {
     "collapsed": false,
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/anaconda/lib/python2.7/site-packages/sklearn/cross_validation.py:44: DeprecationWarning: This module was deprecated in version 0.18 in favor of the model_selection module into which all the refactored classes and functions are moved. Also note that the interface of the new CV iterators are different from that of this module. This module will be removed in 0.20.\n",
-      "  \"This module will be removed in 0.20.\", DeprecationWarning)\n",
-      "/anaconda/lib/python2.7/site-packages/sklearn/grid_search.py:43: DeprecationWarning: This module was deprecated in version 0.18 in favor of the model_selection module into which all the refactored classes and functions are moved. This module will be removed in 0.20.\n",
-      "  DeprecationWarning)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import psycopg2\n",
     "from psycopg2 import extras\n",
@@ -10018,7 +10007,7 @@
     "\n",
     "plt.subplot(1,2,2)\n",
     "plt.hist(np.round(rf_pred5), bins=15, color='g')\n",
-    "plt.title(\"Surgical\")\n",
+    "plt.title(\"Model Prediction\")\n",
     "plt.xlim([0,50])\n",
     "plt.ylim([0,700])\n",
     "plt.legend(loc='upper right')\n",
@@ -10033,7 +10022,7 @@
    "metadata": {},
    "source": [
     "## Conclusion\n",
-    "**Background**: THe DRG classification system was originally developed to identify the \"products\" patients received. The healthcare industry has evolved and developed an increased demand for a classification system at a higher level of precision. As a result, *multiple branches* of the DRG system has expanded to serve various purposes.\n",
+    "**Background**: The DRG classification system was originally developed to identify the \"products\" patients received. The healthcare industry has evolved and developed an increased demand for a classification system at a higher level of precision. As a result, *multiple branches* of the DRG system has expanded to serve various purposes.\n",
     "\n",
     "MIMIC-III dataset does not only use 1 of these systems, but a variety. Thus, creating inconsistencies as a numerical DRG code varies between each branch/system.\n",
     "\n",
@@ -10044,8 +10033,9 @@
     "### Main Points\n",
     "1. As previously discovered, **Random Forest** yields the best metrics in terms of error estimates (**RMSE** & **MAE**) and goodness-of-fit (**R<sup>2</sup>**). This is most likely attributed to the *bagging* component of its ensemble learning.\n",
     "2. Further stratifying (*surgical/medical*) the *manual* classification of patients by major disease categories yielded \n",
-    "   * no improvements in metrics for **Heart Disease**, **Infectious Disease**, **Musculoskeletal System**, & **Nervous System** groups.\n",
-    "   * some improvements for **Respiratory Disease**, though only the *surgical* sub-group"
+    "   * no improvements in metrics for **Heart Disease**, **Infectious Disease**, & **Musculoskeletal System**\n",
+    "   * some improvements for **Respiratory Disease** and **Nervous System Disease**, though only the *surgical* and *medical* sub-groups respectively\n",
+    "   * **Musculoskeletal Diseases** appear to be irrelevant in comparison to other groups (*poor metrics*)"
    ]
   },
   {
@@ -10128,15 +10118,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Conclusion\n",
+    "### Summary\n",
     "In conclusion, **Random Forest** sub-models should be created for these categories to yield optimal results:\n",
     "  * Disease Category by Organ System\n",
     "    * **Heart Disease**\n",
     "    * **Infectious Disease**\n",
     "  * Sub-stratification (*surgical + medical*)\n",
     "    * **Respiratory Disease** (*surgical only*)\n",
-    "    * **Muscoskeletal Diseases** (*medical only*)\n",
     "    * **Nervous System Diseases** (*medical only*)\n",
+    "\n",
     "\n",
     "It should be noted that the high variation within the Nervous System Disease and Musculoskeletal groups may be due to the high variation in the severity of the diseases that they encompass, which may make their models appropriate to include.\n",
     "\n",
